# petfriendlyvet.com

./: .coveragerc  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SYSTEM_CHARTER.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  index.html  nginx-subdirectory.conf  nginx.conf  package-lock.json  package.json  posts.json  pytest.ini  tailwind.config.js
config/: __init__.py  asgi.py  celery.py  docgen_pages.py  docgen_workflows.py  urls.py  wsgi.py
docs/: ACCOUNTING.md  ACCOUNTS.md  ADMIN_GUIDE.md  ADMIN_GUIDE_ES.md  AI_ASSISTANT.md  APPOINTMENTS.md  AUDIT.md  BILLING.md  COMMUNICATIONS.md  COMPETITIVE.md  CORE.md  CRM.md  DELIVERY.md  DEPLOYMENT.md  EMAIL_MARKETING.md  EMERGENCY.md  ERROR_TRACKING.md  HR.md  INVENTORY.md  KNOWLEDGE.md  LOYALTY.md  MULTILINGUAL.md  NOTIFICATIONS.md  PARTIES.md  PERMISSIONS.md  PETS.md  PHARMACY.md  PRACTICE.md  REFERRALS.md  REPORTS.md  REVIEWS.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT_ES.md  SECURITY_EXECUTIVE_SUMMARY.md  SECURITY_EXECUTIVE_SUMMARY_ES.md  SEO.md  SERVICES.md  STORE.md  TESTING.md  (+4 more)
images/: manifest.json
nginx-local/: README.md  generate-certs-mkcert.sh  generate-certs.sh  local-dev.conf  setup-hosts.sh
planning/: AI_CHARTER.md  AI_TOOL_SCHEMAS.md  ARCHITECTURE_DECISIONS.md  CLIENT_CHECKLIST.md  CLIENT_CONTENT_REQUIREMENTS.md  CODING_STANDARDS.md  DATABASE_SCHEMA.md  DEPENDENCIES.md  EHRNOTES.md  EMR_ARCHITECTURE.md  EPOCH_DELIVERY_MODULE.md  EPOCH_TESTING_FRAMEWORK.md  LICENSING.md  MODULE_INTERFACES.md  PREPOCH.md  PROJECT_CHARTER.md  README.md  ROADMAP_IDEAS.md  RUST_COMPONENTS.md  SPEC_SUMMARY.md  SPRINT_URL_REMEDIATION.md  STORY_TO_TASK_CHECKLIST.md  TASK_BREAKDOWN.md  TASK_INDEX.md  TDD_STOP_GATE.md
planning-es/: DECISIONES_ARQUITECTURA.md  ESTANDARES_CODIGO.md  PROJECT_CHARTER.md  README.md  REQUISITOS_CONTENIDO_CLIENTE.md  SPEC_SUMMARY.md
requirements/: base.txt  development.txt  production.txt  test.txt
rust/: Cargo.toml  README.md
rust/pfv-license/: Cargo.toml
rust/pfv-license/src/: main.rs
rust/scc-license/: Cargo.toml
rust/scc-license/src/: main.rs
scripts/: db_sync.py  deploy.conf-example  deploy.conf.example  deploy.sh  optimize_media.py
temp-site/: Dockerfile  docker-compose.yml  index.html  nginx.conf
templates/: 403_csrf.html  404.html  500.html  base.html  base_portal.html  base_staff.html  base_staff_fullwidth.html  base_superadmin.html
tests/: __init__.py  conftest.py  test_about_page.py  test_accounting.py  test_accounting_views.py  test_accounts_models.py  test_admin_chat.py  test_ai_client.py  test_ai_context_injection.py  test_ai_service.py  test_ai_views.py  test_appointment_reminders.py  test_crm.py  (+73 more)
(+1289 files in other folders)
