[package]
name = "scc-license"
version = "0.1.0"
edition = "2021"
description = "License validator for South City Computer software products"
authors = ["Nestor Wheelock <nestor@southcitycomputer.com>"]

[[bin]]
name = "scc-license"
path = "src/main.rs"

[[bin]]
name = "scc-license-generate"
path = "src/bin/generate.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"           # Cryptographic signatures
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true              # Link-time optimization
strip = true            # Strip symbols (harder to reverse)
panic = "abort"
